Adding new image, new styles on css for the body and insert new html meta data

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Juan Plasencia | WDD 130</title>
+        <meta name="description" content="The web site is created by Juan Plasencia, a software developeras, as a part of the WDD 130 course, which teaches the fundamentals of web design and development. The web site uses HTML and CSS to create a responsive and interactive layout presentation">
+        <meta name="author" content="Juan Plasencia">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -21,6 +23,11 @@
                 traveling, and spending time with my wife and cat, we love to spend time together 
                 as a family.</p>
         </main>
+        <aside>
+            <h2>Peru</h2>
+            <img src="images/Machu_Picchu.jpg" alt="Machu Picchu">
+            <p>Peru is a South American country with a rich and diverse culture, history, and geography. Peru has the legacy of the Incas, the biodiversity of the Amazon, the Andes, and the coast, and the democracy of a republic. Peru has a population of over 35 million people, who speak Spanish and other languages. Peru has a dynamic and diverse economy, based on mining, agriculture, tourism, and manufacturing.</p>
+        </aside>
         <footer>
             <p>©2023 🏆 Juan Plasencia 🏆 Lima, Perú</p>
         </footer>
