--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -29,7 +29,15 @@
             <h2>Style Guide</h2>
             
             <h3>Color Palette</h3>
-            <p><ul><li>primary-color: #023047</li><li>secondary-color: #219EBC</li><li>accent1-color: #FFB703</li><li>accent2-color: #FB8500</li><li>From: <a href="https://coolors.co/023047-219ebc-ffb703-fb8500" target="_blank">https://coolors.co/023047-219ebc-ffb703-fb8500</a></li></ul></p>
+            <div>
+                <ul>
+                    <li>primary-color: #023047</li>
+                    <li>secondary-color: #219EBC</li>
+                    <li>accent1-color: #FFB703</li>
+                    <li>accent2-color: #FB8500</li>
+                    <li>From: <a href="https://coolors.co/023047-219ebc-ffb703-fb8500" target="_blank">https://coolors.co/023047-219ebc-ffb703-fb8500</a></li>
+                </ul>
+            </div>
             <h3>Typography</h3>
             <h4>Heading Example Font</h4>
             <p>Name of the fonts: Red Hat Display(SemiBold 600), Category of font: Sans Serif</p>
