On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   index.html
	modified:   styles/styles.css

--- a/index.html
+++ b/index.html
@@ -14,16 +14,35 @@
                 <a href="#">Home</a>
                 <a href="wwr/">White Water Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+                <a href="https://www.linkedin.com/in/juarpla/">LinkedIn - My profile</a>
+                <a href="https://www.facebook.com/Juan.Plasencia.Leyva">Facebook - My profile</a>
             </nav>
         </header>
         <main>
             <h1>Juan Plasencia | WDD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Juan Plasencia" width="200">
-            <p>Hello! My name is Juan Plasencia and I am from Lima, Perú. I love coding, swimming, 
-                traveling, and spending time with my wife and cat, we love to spend time together 
-                as a family.</p>
+            <p> 
+                Hello! My name is Juan Plasencia and I am from Lima, Perú, a beautiful and diverse 
+                country in South America. Coding is my passion and I am always eager to learn new 
+                skills and technologies. I have been teaching myself Java and Spring Boot, which 
+                are powerful tools for web development. I am also looking for opportunities to work 
+                as a software developer, where I can apply my knowledge and creativity. Apart from 
+                coding, I have a lot of other interests that make me happy. I love swimming, which 
+                is a great way to exercise and relax. I love traveling, which allows me to explore 
+                new countries and cultures. I love eating delicious food, which satisfies my taste 
+                buds and nourishes my body. I love visiting historical places, which enriches my 
+                mind and inspires me. I love taking pictures, which captures the beauty and memories 
+                of life. Most of all, I love spending time with my wife and cat, who are my family 
+                and my support system. We love to have fun and relax together, enjoying every moment 
+                of our lives.
+            </p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/trujillo-peru-temple?lang=eng" target="_blank">Trujillo Peru Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-los-olivos-temple?lang=eng" target="_blank">Lima Peru Los Olivos Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/arequipa-peru-temple?lang=eng" target="_blank">Arequipa Peru Temple</a></li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>Peru</h2>
             <img src="images/Machu_Picchu.jpg" alt="Machu Picchu">
             <p>Peru is a South American country with a rich and diverse culture, history, and geography. Peru has the legacy of the Incas, the biodiversity of the Amazon, the Andes, and the coast, and the democracy of a republic. Peru has a population of over 35 million people, who speak Spanish and other languages. Peru has a dynamic and diverse economy, based on mining, agriculture, tourism, and manufacturing.</p>
@@ -32,4 +51,5 @@
             <p>©2023 🏆 Juan Plasencia 🏆 Lima, Perú</p>
         </footer>
     </body>
+    <!-- Last modification: September 30th, 2023.  -->
 </html>
