On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   wwr/site-plan-rafting.html

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -17,9 +17,26 @@
             <h2>Overview</h2>
 
             <h3>Purpose</h3>
-            <p>Our mission is to provide you with an unforgettable experience of whitewater rafting on some of the most scenic and challenging rivers in the world. Whether you are a beginner or an expert, we have a trip that suits your level of adventure and skill.</p>
+            <p>Our mission is to provide you with an unforgettable 
+                experience of whitewater rafting on some of the most 
+                scenic and challenging rivers in the world. Whether 
+                you are a beginner or an expert, we have a trip that 
+                suits your level of adventure and skill.</p>
+            
             <h3>Audience</h3>
-            <p>We target adventurous and nature-loving people who want to experience whitewater rafting. They are 18-65 years old, have moderate to high income, and enjoy outdoor sports. They want to find a website that offers various rafting trips, with clear and detailed information, testimonials, photos, and videos. They need excitement, novelty, and connection with nature and others. They access our website through their mobile devices.</p>
+            <p>Who are the target customers?<br />
+               We target adventurous and nature-loving people who want 
+               to experience whitewater rafting. They are 18-50 years 
+               old, have moderate to high income, and enjoy outdoor 
+               sports.</p>
+            <p>What do they want?<br />
+               They want to find a website that offers various 
+               rafting trips, with clear and detailed information, 
+               testimonials, photos, and videos. They need excitement, 
+               novelty, and connection with nature and others.</p>
+            <p>How will my audience usually access my site?<br />
+               They access our website through their destok and 
+               mobile devices.</p>
 
             <h2>Branding</h2>
 
