On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   wwr/site-plan-rafting.html -- deleted "/" in br

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -24,17 +24,17 @@
                 suits your level of adventure and skill.</p>
             
             <h3>Audience</h3>
-            <p>Who are the target customers?<br />
+            <p>Who are the target customers?<br>
                We target adventurous and nature-loving people who want 
                to experience whitewater rafting. They are 18-50 years 
                old, have moderate to high income, and enjoy outdoor 
                sports.</p>
-            <p>What do they want?<br />
+            <p>What do they want?<br>
                They want to find a website that offers various 
                rafting trips, with clear and detailed information, 
                testimonials, photos, and videos. They need excitement, 
                novelty, and connection with nature and others.</p>
-            <p>How will my audience usually access my site?<br />
+            <p>How will my audience usually access my site?<br>
                They access our website through their destok and 
                mobile devices.</p>
 
