On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   wwr/about.html
	new file:   wwr/images/history.jpg
	new file:   wwr/index.html
	modified:   wwr/styles/rafting.css

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -31,25 +31,52 @@
                        suits your level of adventure and skill.</p>
                 </article>
             </div>
-            <section>
+            <section class="history">
                 <h2>History</h2>
                 <p>Splash: White Water Rafting is a company that was 
-                   founded in 2020 by a group of passionate rafters 
-                   who wanted to share their love for the sport with 
-                   others. They started with offering trips on the 
-                   Colorado River in the Grand Canyon, one of the 
-                   most iconic and spectacular whitewater destinations 
-                   in the world. Since then, they have also developed a 
-                   reputation for providing high-quality equipment, 
-                   safety standards, and customer service.</p>
+                    founded in 2020 by a group of passionate rafters 
+                    who wanted to share their love for the sport with 
+                    others. They started with offering trips on the 
+                    Colorado River in the Grand Canyon, one of the 
+                    most spectacular and challenging whitewater 
+                    destinations in the world. They quickly gained 
+                    popularity among adventure seekers and nature lovers, 
+                    who appreciated their professionalism, enthusiasm, 
+                    and respect for the environment.</p>
+                <img src="images/history.jpg" alt="Rafting Legacy">
+                <p>Since then, Splash: White Water Rafting has expanded 
+                    its operations to include other rivers in the United 
+                    States and abroad, such as the Arkansas River in 
+                    Colorado, the Zambezi River in Africa, and the 
+                    Futaleufú River in Chile. They have also developed 
+                    a reputation for providing high-quality equipment, 
+                    safety standards, and customer service. Their mission 
+                    is to create unforgettable experiences for their 
+                    clients, while promoting conservation and education 
+                    about the rivers they explore.</p>
             </section>
             <section class="gallery">
                 <h2>Adventure Awaits You</h2>
-                <img src="images/serie_01.jpg" alt="Rogue River"><p>Rogue River</p>
-                <img src="images/serie_02.jpg" alt="Arkansas River"><p>Arkansas River</p>
-                <img src="images/serie_03.jpg" alt="Boise River"><p>Boise River</p>
-                <img src="images/serie_04.jpg" alt="Colorado River"><p>Colorado River</p>
-                <img src="images/serie_05.jpg" alt="Snake River"><p>Snake River</p>
+                <figure>
+                    <img src="images/serie_01.jpg" alt="Rogue River">
+                    <figcaption>Rogue River</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/serie_02.jpg" alt="Arkansas River">
+                    <figcaption>Arkansas River</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/serie_03.jpg" alt="Boise River">
+                    <figcaption>Boise River</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/serie_04.jpg" alt="Colorado River">
+                    <figcaption>Colorado River</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/serie_05.jpg" alt="Snake River">
+                    <figcaption>Snake River</figcaption>
+                </figure>
             </section>
         </main>
         <footer>
