changing tittle name

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About Us</title>
+        <title>Splash | About Us</title>
         <meta name="description" content="This page will be an 'About Us' type of page which may provide contact information, history, and other promotions">
         <meta name="author" content="Juan Plasencia">
         <link rel="stylesheet" href="styles/rafting.css">
