--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -15,8 +15,8 @@
                     <legend>Contact Information</legend>
                     <label for="fullname">Full Name</label>
                     <input type="text" name="fullname" id="fullname">
-                    <label for="email">Email:</label>
-                    <input type="email" name="username" id="username">
+                    <label for="mail">Email:</label>
+                    <input type="email" name="mail" id="mail">
                 </fieldset>
                 <fieldset>
                     <legend>Questions</legend>
