--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WDD 130 | HTML Form - User Poll</title>
+        <link rel="stylesheet" href="style/poll-form.css">
     </head>
     <body>
         <header>
@@ -13,26 +14,34 @@
             <form>
                 <fieldset>
                     <legend>Contact Information</legend>
-                    <label for="fullname">Full Name</label>
-                    <input type="text" name="fullname" id="fullname">
-                    <label for="mail">Email:</label>
-                    <input type="email" name="mail" id="mail">
+                    <div class="form-item columm2">
+                        <label for="fullname">Full Name</label>
+                        <input type="text" name="fullname" id="fullname">
+                    </div>
+                    <div class="form-item columm2">
+                        <label for="mail">Email:</label>
+                        <input type="email" name="mail" id="mail">
+                    </div>
                 </fieldset>
                 <fieldset>
                     <legend>Questions</legend>
-                    <label for="browser">What is your favorite internet browser?</label>
-                    <select name="browser" id="browser">
+                    <div class="form-item columm1">
+                        <label for="browser">What is your favorite internet browser?</label>
+                        <select name="browser" id="browser">
                         <option value="chrome">Chrome</option>
                         <option value="brave">Brave</option>
                         <option value="opera">Opera</option>
                         <option value="firefox">Firefox</option>
                         <option value="edge">Edge</option>
                         <option value="other">Other</option>
-                    </select>
-                    <label for="pet">Do you have a household pet?</label>
-                    <input type="checkbox" name="pet" id="pet">
+                        </select>
+                    </div>
+                    <div class="form-item columm1">
+                        <label for="pet">Do you have a household pet?</label>
+                        <input type="checkbox" name="pet" id="pet">
+                    </div>
                     <label for="feedback">List the place you have lived:</label>
-                    <textarea name="feedback" id="feedback" rows="4" placeholder="Trujillo Peru, Asuncion Paraguay, Santiago Chile"></textarea>
+                    <textarea name="feedback" id="feedback" rows="4" placeholder="Trujillo Peru, Asuncion Paraguay, Santiago Chile, etc."></textarea>
                 </fieldset>
                 <button type="submit">Submit Poll</button>
             </form>
