--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Basic Web Quiz</title>
+        <title>Basic HTML and CSS Quiz</title>
+        <meta name="description" content="This is a Basic HTML and CSS Quiz for students">
+        <meta name="author" content="Juan Plasencia">
         <link rel="stylesheet" href="styles/quiz.css">
     </head>
     <body>
