update meta description

--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Basic HTML and CSS Quiz</title>
-        <meta name="description" content="This is a Basic HTML and CSS Quiz for students">
+        <meta name="description" content="This is a Basic HTML and CSS Quiz for students to verify their knowledge about web">
         <meta name="author" content="Juan Plasencia">
         <link rel="stylesheet" href="styles/quiz.css">
     </head>
