On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   wwr/contact.html
    "id" can´t no contain spaces

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -94,12 +94,12 @@
                 </div>
                 <div class="radio">
                     <p>PURPOSE OF THE MESSAGE:</p>
-                    <input type="radio" id="general inquiry" name="subject" value="General Inquiry">
-                    <label for="general inquiry">General Inquiry</label>
-                    <input type="radio" id="reservation question" name="subject" value="Reservation Question">
-                    <label for="reservation question">Reservation Question</label>
-                    <input type="radio" id="website suggestion" name="subject" value="Website Suggestion">
-                    <label for="website suggestion">Website Suggestion</label>
+                    <input type="radio" id="general-inquiry" name="subject" value="General Inquiry">
+                    <label for="general-inquiry">General Inquiry</label>
+                    <input type="radio" id="reservation-question" name="subject" value="Reservation Question">
+                    <label for="reservation-question">Reservation Question</label>
+                    <input type="radio" id="website-suggestion" name="subject" value="Website Suggestion">
+                    <label for="website-suggestion">Website Suggestion</label>
                 </div>
                 <div class="message">
                     <label for="q2">MESSAGE:</label><br>
