--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <section class="profiles">
+        <div class="profiles">
             <h1>Reach Our team</h1>
             <p>We love questions and feedback – and we're always happy to
                 help! Here are some ways to contact us.</p>
@@ -37,8 +37,8 @@
                 <img src="images/contactus_03.jpg" alt="Sam Jackson">
                 <figcaption>Sam Jackson<br>- Technical Support -</figcaption>
             </figure>
-        </section>
-        <section class="information">
+        </div>
+        <div class="information">
             <table>
                 <thead>
                     <tr>
@@ -79,8 +79,8 @@
                 src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2143.8238364214153!2d-97.13090536286384!3d49.886692345587626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDnCsDUzJzEyLjEiTiA5N8KwMDcnNTQuMSJX!5e1!3m2!1sen!2spe!4v1697501219477!5m2!1sen!2spe"
                 width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>  
-        </section>
-        <section class="form">
+        </div>
+        <div class="form">
             <form>
                 <h2>Send Us a Message</h2>
                 <p>Send us a message and we'll respond within 24 hours.</p>
@@ -111,7 +111,7 @@
                 </div>
                 <button type="submit">Subtmit Message</button>
             </form>
-        </section>
+        </div>
     </main>
     <footer>
         <p>©2023 🏆 Splash: White Water Rafting 🏆 Juan Plasencia</p>
