On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   wwr/contact.html
	modified:   wwr/styles/rafting.css

    fixing map

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Splash | Contact Us</title>
+    <title>Contact Splash</title>
     <meta name="description" content="This page will give to the user a way to contact the company">
     <meta name="author" content="Juan Plasencia">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -77,7 +77,7 @@
             </table>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2143.8238364214153!2d-97.13090536286384!3d49.886692345587626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDnCsDUzJzEyLjEiTiA5N8KwMDcnNTQuMSJX!5e1!3m2!1sen!2spe!4v1697501219477!5m2!1sen!2spe"
-                width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                width="800" height="600" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>  
         </div>
         <div class="form">
