On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   wwr/contact.html

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Splash</title>
-    <meta name="description" content="This page will give to the user a way to contact the company">
+    <title>Contact Splash: White Water Rafting</title>
+    <meta name="description" content="This page will give to the user a way to contact Splash company and the employees">
     <meta name="author" content="Juan Plasencia">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
