Finall structure for web site rafting

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -127,8 +127,8 @@
                 <img src="images/instagram.svg" alt="Instagram">
             </a>
         </nav>
-        <p><a href="https://app.moqups.com/wCQYlrutoMVoy80IWILjraEr8BXfJ3L7/view/page/ad12de680">Contact Us page
-                wireframe</a></p>
+        <p><a href="images/contact_page.jpg" target="_blank">Contact
+                Us page wireframe</a></p>
     </footer>
 </body>
 
