--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -1,11 +1,193 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trips Splash: White Water Rafting</title>
+    <meta name="description"
+        content="This page provides information about the specific trips, adventures, and packages that Splash company offers to clients">
+    <meta name="author" content="Juan Plasencia">
+    <link rel="stylesheet" href="styles/rafting.css">
+</head>
+
+<body>
+    <header>
+        <img src="images/logo.png" alt="Logo" width="150">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact Us</a>
+        </nav>
+    </header>
+    <main>
+        <section class="profiles">
+            <h1>Get Rafting Trip Today!</h1>
+            <p>Rafting is an exciting and adventurous way to explore.</p>
+            <button><a href="contact.html">GET THE TRIP</a></button>
+        </section>
+        <section class="head_places">
+            <h2>Let's go with us!</h2>
+            <p>We have the best places to start your rafting journey.</p>
+        </section>
+        <div class="places">
+            <section>
+                <h2>Lorem ipsum dolor sit amet.</h2>
+                <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquam, officia magni minima
+                    quis aperiam placeat deleniti fuga neque fugiat architecto, molestias voluptas aut suscipit vel.
+                    Saepe quia magnam sit.</article>
+                <iframe src="" frameborder="0"></iframe>
+                <h2>Lorem ipsum dolor sit amet.</h2>
+                <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquam, officia magni minima
+                    quis aperiam placeat deleniti fuga neque fugiat architecto, molestias voluptas aut suscipit vel.
+                    Saepe quia magnam sit.</article>
+                <iframe src="" frameborder="0"></iframe>
+                <h2>Lorem ipsum dolor sit amet.</h2>
+                <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aliquam, officia magni minima
+                    quis aperiam placeat deleniti fuga neque fugiat architecto, molestias voluptas aut suscipit vel.
+                    Saepe quia magnam sit.</article>
+                <iframe src="" frameborder="0"></iframe>
+            </section>
+            <aside>
+                <figure>
+                    <ul>
+                        <li><img src="images/serie_01.jpg" alt="Rogue River"></li>
+                        <li><img src="images/serie_02.jpg" alt="Rogue River"></li>
+                        <li><img src="images/serie_03.jpg" alt="Rogue River"></li>
+                    </ul>
+                    <figcaption>Rogue River</figcaption>
+                </figure>
+                <figure>
+                    <ul>
+                        <li><img src="images/serie_01.jpg" alt="Arkansas River"></li>
+                        <li><img src="images/serie_02.jpg" alt="Arkansas River"></li>
+                        <li><img src="images/serie_03.jpg" alt="Arkansas River"></li>
+                    </ul>
+                    <figcaption>Arkansas River</figcaption>
+                </figure>
+                <figure>
+                    <ul>
+                        <li><img src="images/serie_01.jpg" alt="Boise River"></li>
+                        <li><img src="images/serie_02.jpg" alt="Boise River"></li>
+                        <li><img src="images/serie_03.jpg" alt="Boise River"></li>
+                    </ul>
+                    <figcaption>Boise River</figcaption>
+                </figure>
+            </aside>
+        </div>
+        <div class="information">
+            <table>
+                <thead>
+                    <tr>
+                        <th colspan="3">The trip information center</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <h3>Rogue River</h3>
+                        </td>
+                        <td>11:00 AM</td>
+                        <td>START<br>Add a short description</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="3">
+                            <ul>
+                                <li>Beyond our talks, we will</li>
+                                <li>Beyond our talks, we will</li>
+                                <li>Beyond our talks, we will</li>
+                            </ul>
+                        </td>
+                        <td>11:20 AM</td>
+                        <td>START<br>Add a short description</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>13:30AM</td>
+                        <td>START<br>Add a short description</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>14:30AM</td>
+                        <td>START<br>Add a short description</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h3>Rogue River</h3>
+                        </td>
+                        <td>11:00 AM</td>
+                        <td>START<br>Add a short description</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="3">
+                            <ul>
+                                <li>Beyond our talks, we will</li>
+                                <li>Beyond our talks, we will</li>
+                                <li>Beyond our talks, we will</li>
+                            </ul>
+                        </td>
+                        <td>11:20 AM</td>
+                        <td>START<br>Add a short description</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>13:30AM</td>
+                        <td>START<br>Add a short description</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>14:30AM</td>
+                        <td>START<br>Add a short description</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h3>Rogue River</h3>
+                        </td>
+                        <td>11:00 AM</td>
+                        <td>START<br>Add a short description</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="3">
+                            <ul>
+                                <li>Beyond our talks, we will</li>
+                                <li>Beyond our talks, we will</li>
+                                <li>Beyond our talks, we will</li>
+                            </ul>
+                        </td>
+                        <td>11:20 AM</td>
+                        <td>START<br>Add a short description</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>13:30AM</td>
+                        <td>START<br>Add a short description</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>14:30AM</td>
+                        <td>START<br>Add a short description</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </main>
+    <footer>
+        <p>©2023 🏆 Splash: White Water Rafting 🏆 Juan Plasencia</p>
+        <nav class="sociallinks">
+            <a href="http://facebook.com">
+                <img src="images/facebook.svg" alt="Facebook">
+            </a>
+            <a href="http://twitter.com">
+                <img src="images/twitter.svg" alt="Twitter">
+            </a>
+            <a href="http://instagram.com">
+                <img src="images/instagram.svg" alt="Instagram">
+            </a>
+        </nav>
+        <p><a href="images/trip_page.jpg" target="_blank">Trip
+                page wireframe</a></p>
+    </footer>
+</body>
+
 </html>
