adding img to index.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -41,6 +41,17 @@
                 <button type="submit">SING UP</button>
             </form>
         </section>
+        <section class="gallery">
+            <h2>Adventure Awaits You</h2>
+            <figure>
+                <img src="images/serie_01.jpg" alt="Rogue River">
+                <figcaption>Rogue River</figcaption>
+            </figure>
+            <figure>
+                <img src="images/serie_02.jpg" alt="Arkansas River">
+                <figcaption>Arkansas River</figcaption>
+            </figure>
+        </section>
         <div class="media">
             <section>
                 <h2>IMPORTANT INFORMATION</h2>
@@ -82,9 +93,9 @@
             </aside>
         </div>
         <section>
-            <h2>Get Rafting Trip Today!</h2>
-            <p>Rafting is an exciting and adventurous way to explore.</p>
-            <button><a href="contact.html">GET THE TRIP</a></button>
+            <h2>Have fun and see our trips!</h2>
+            <p>Never give up and wake up your adventure spirit.</p>
+            <button><a href="trips.html">START THE ADVENTURE</a></button>
         </section>
     </main>
     <footer>
