Final Estructure trip and fixes to set css

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -22,7 +22,7 @@
             <div class="hero">
                 <img src="images/hero.jpg" alt="rafting enviromnet">
                 <h1>Splash: White Water Rafting</h1>
-                <article>
+                <article class="heading_about">
                     <img src="images/article_happy.jpg" alt="Happy pepople rafting">
                     <p>Our mission is to provide you with an unforgettable 
                        experience of whitewater rafting on some of the most 
