fianl structure html and css

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -22,56 +22,54 @@
         </nav>
     </header>
     <main>
-        <section class="profiles">
+        <section class="full_width">
+            <img src="images/hero.jpg" alt="Rafting Style">
             <h1>Start Your Adventure Style life with us</h1>
             <p>In Splash Rafting, you are the most important part of one new adventure.</p>
-            <img src="images/hero.jpg" alt="Rafting Style">
         </section>
-        <section>
-            <form>
+        <section class="sign_up">
+            <form class="single_form">
                 <h2>Newsletter sing up for FREE</h2>
-                <div class="name">
-                    <label for="name">YOUR NAME:</label><br>
-                    <input type="text" name="name" id="name">
-                </div>
-                <div class="email">
-                    <label for="email">YOUR EMAIL:</label><br>
-                    <input type="text" name="email" id="email">
-                </div>
-                <button type="submit">SING UP</button>
+                <label><input required type="text" name="name" placeholder="YOUR NAME:"></label><br>
+                <label><input required type="text" name="name" placeholder="YOUR EMAIL:"></label><br>
+                <button type="submit">SIGN UP</button>
             </form>
         </section>
-        <div class="media">
-            <section>
-                <h2>IMPORTANT INFORMATION</h2>
+        <section class="important_information">
+            <h2>IMPORTANT INFORMATION</h2>
+            <article>
                 <h3>What we offer?</h3>
-                <article>Short description of your target audience. Lorem ipsum dolor
+                <p>Short description of your target audience. Lorem ipsum dolor
                     sit amet, consectetur adipiscing elit. Donec egestas metus metus,
                     In bibendum lacus rutrum vitae. Nam posuere est ut odio efficitur,
                     id orci consectetur. Maecenas id lectus sed arcu hendrerit
                     tincidunt. Duis feugiat magna at gravida finibus. Aenean dapibus
                     tincidunt dolor ac finibus. Donec vel ligula dui. Sed dignissim dui
-                    eget.</article>
+                    eget.</p>
+            </article>
+            <article>
                 <h3>Why chose us?</h3>
-                <article>Short description of your target audience. Lorem ipsum dolor
+                <p>Short description of your target audience. Lorem ipsum dolor
                     sit amet, consectetur adipiscing elit. Donec egestas metus metus,
                     In bibendum lacus rutrum vitae. Nam posuere est ut odio efficitur,
                     id orci consectetur. Maecenas id lectus sed arcu hendrerit
                     tincidunt. Duis feugiat magna at gravida finibus. Aenean dapibus
                     tincidunt dolor ac finibus. Donec vel ligula dui. Sed dignissim dui
-                    eget.</article>
-            </section>
-            <section class="gallery">
-                <h3>Adventure Awaits You</h3>
-                <figure>
-                    <img src="images/serie_01.jpg" alt="Rogue River">
-                    <figcaption>Rogue River</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/serie_02.jpg" alt="Arkansas River">
-                    <figcaption>Arkansas River</figcaption>
-                </figure>
-            </section>
+                    eget.</p>
+            </article>
+        </section>
+        <section class="mini_gallery">
+            <h2>Adventure Awaits You</h2>
+            <figure>
+                <img src="images/serie_01.jpg" alt="Rogue River">
+                <figcaption>Rogue River</figcaption>
+            </figure>
+            <figure>
+                <img src="images/serie_02.jpg" alt="Arkansas River">
+                <figcaption>Arkansas River</figcaption>
+            </figure>
+        </section>
+        <div class="media">
             <section>
                 <h2>You'll Love Our Servicies</h2>
                 <article>Introduce your video and provide a sense of your company's
@@ -92,10 +90,10 @@
                 <p>You always will get new adventure choosen are services</p>
             </aside>
         </div>
-        <section>
+        <section class="trip_call">
             <h2>Have fun and see our trips!</h2>
             <p>Never give up and wake up your adventure spirit.</p>
-            <button><a href="trips.html">START THE ADVENTURE</a></button>
+            <a href="trips.html"><button>START THE ADVENTURE</button></a
         </section>
     </main>
     <footer>
